Fixed “learn more” and got rid of bold text

--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 					<section id="banner" style="background: rgba(0,0,0,0.5);">
 						<div class="inner">
 							<img class="logo" src="images/logowithstroke.png" />
-							<h4>Vincent Massey Secondary School</h4>
-							<h4>1800 Liberty St.</h4>
-							<h4>Teaching the Fundamentals of Computer Science</h4>
-							<h4>Starting September 2018</h4>
-							<h4 id="date-time">Every Thursday | 4:15 - 5:30</h4>
+							<p>Vincent Massey Secondary School<br>
+							1800 Liberty St.<br>
+							Teaching the Fundamentals of Computer Science<br>
+							Starting September 2018<br>
+							<span id="date-time">Every Thursday | 4:15 - 5:30</span></p>
 							<ul class="actions special">
 								<li><a href="form.html" class="button primary">SIGNUP</a></li>
 							</ul>
