Reverted broken-ness

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="assets/js/custom.js"></script>
 		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/main.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<style>
@@ -200,6 +198,8 @@
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script async src="assets/js/custom.js"></script>
 			<!-- Global site tag (gtag.js) - Google Analytics -->
 			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86188538-4"></script>
 			<script async src='https://www.google.com/recaptcha/api.js'></script>
