--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 										<h4>Noor Nasri</h4>
 									</header>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/noor.jpg" />
 									</span>								
 								</div>
 								<div class="col-3 col-12-medium profile-label">
