--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 								</div>
 								<div class="col-3 col-12-medium profile-label">
 									<header>
-										<h4>Zhang Zhehai</h4>
+										<h4>Zhehai Zhang</h4>
 									</header>
 									<span class="image fit profiles">
 										<img class="img-circle" src="images/zhehai.jpg" />
