--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Feeda Elahresh</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/feeda.jpg" />
 									</span>								
 								</div>
 								<div class="col-3 col-12-medium profile-label">
