--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
 									</span>
 								</div>
 								<div class="col-3 col-12-medium profile-label">
-									<h4>Liu Qin</h4>
+									<h4>Jack Liu</h4>
 									<span class="image fit profiles">
 										<img class="img-circle" src="images/pic04.jpg" />
 									</span>
