deleted useless descp.

--- a/about.html
+++ b/about.html
@@ -111,8 +111,8 @@
 								</div>
 							</div>
 							<hr />
-							<h2 class="profile-label">THE REST OF OUR TEAM</h2>
-							<div class="row">
+<!-- 							<h2 class="profile-label">THE REST OF OUR TEAM</h2>
+ -->							<div class="row">
 								<div class="col-3 col-12-medium profile-label">
 									<h4>David Hui</h4>
 									<span class="image fit profiles">
