--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Joshua M.</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/josh.jpg" />
 									</span>
 								</div>
 								<div class="col-3 col-12-medium profile-label">
