--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Aaryan Patel</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/aaryan.jpg" />
 									</span>
 								</div>
 								<div class="col-3 col-12-medium profile-label">
