--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Georgia Berg</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/georgia.jpg" />
 									</span>
 								</div>
 							</div>
