--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Ellen Tao</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/ellen.jpg" />
 									</span>
 								</div>
 								<div class="col-3 col-12-medium profile-label">
