--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Jonathan Wang</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/jon.jpg" />
 									</span>								
 								</div>
 								<div class="col-3 col-12-medium profile-label">
