--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 							<img class="logo" src="images/logowithstroke.png" />
 							<p>Vincent Massey Secondary School<br>
 							1800 Liberty St.<br>
-							Teaching the Fundamentals of Computer Science<br>
-							Starting September 2018<br>
+							Coding course for elementary school students<br>
+							Starting 2nd Week October 2018<br>
 							<span id="date-time">Every Thursday | 4:15 - 5:30</span></p>
 							<ul class="actions special">
 								<li><a href="form.html" class="button primary">SIGNUP</a></li>
