--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
 								<div class="col-3 col-12-medium profile-label">
 									<h4>Fadilah Khan</h4>
 									<span class="image fit profiles">
-										<img class="img-circle" src="images/pic04.jpg" />
+										<img class="img-circle" src="images/fadilah.jpg" />
 									</span>
 								</div>
 								<div class="col-3 col-12-medium profile-label">
