--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<head>
 		<title>Home - CodeReach</title>
 		<meta charset="utf-8" />
-		<meta property = "og:iamge" content="images/logowithstroke.png" />
+		<meta property = "og:image" content="images/logowithstroke.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
 		<link rel="stylesheet" href="assets/css/main.css" />
