--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<p>Vincent Massey Secondary School<br>
 							1800 Liberty St.<br>
 							Coding course for elementary school students<br>
-							Starting 2nd Week October 2018<br>
+							Starting October 11th 2018<br>
 							<span id="date-time">Every Thursday | 4:15 - 5:30</span></p>
 							<ul class="actions special">
 								<li><a href="form.html" class="button primary">SIGNUP</a></li>
@@ -98,7 +98,7 @@
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Our
 								Goal</h2>
-								<p>In an ever growing technology-driven world, we strive to prepare young minds in our community for what the future holds. Programming is a sought-after skill that, unfortunately, is not taught in elementary school. We hope that through programming, our students will be proactive when using computers and hopefully reach a point where they can whatever they want.</p>
+								<p>In an ever growing technology-driven world, we strive to prepare young minds in our community for what the future holds. Programming is a sought-after skill that, unfortunately, is not taught in elementary school. We hope that through programming, our students will be proactive when using computers and hopefully reach a point where they can make whatever they want.</p>
 							</div>
 						</section>
 						<section class="spotlight">
