Changed up colors to pop less

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>We Are A Vincent Massey organization that teaches<br />
-								Grade 7 and 8 students the basics of computer science</h2>
+								<h2>CodeReach teaches the fundementals of computer science to Grade 7 and 8 students</h2>
 								<p>CodeReach helps create the foundation of computer science for students to prepare them for more complicated computer science classes in the future.</p>
 							</header>
 						</div>
