--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							Starting October 11th 2018<br>
 							<span id="date-time">Every Thursday | 4:00 - 5:30</span></p>
 							<ul class="actions special">
-								<li><a href="form.html" class="button primary">SIGNUP</a></li>
+								<li><a href="https://register.codereach.ca" class="button primary">SIGNUP</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -171,7 +171,7 @@
 								<p>Accepting Grade 7-8 students.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="form.html" class="button fit primary">Signup</a></li>
+								<li><a href="https://register.codereach.ca" class="button fit primary">Signup</a></li>
 							</ul>
 						</div>
 					</section>
