--- a/lesson/index.html
+++ b/lesson/index.html
@@ -6,5 +6,6 @@
 <body>
     <a href="https://docs.google.com/document/d/1QTEqfzIlmI09FrOiCzgsvfBd8eAO_0lwRXS7quG4S4s/edit#heading=h.veudftfxov1">Week 2</a>
     <a href="https://docs.google.com/document/d/1VFdTG5CYdTA69wFvIMfdcbPS3XtH_HDCz49uGNM3WGY/edit#">Week 3</a>
+    <a href="https://docs.google.com/document/d/18sndp-REp0ms8PQf3KAE9V8brwbjVgJDCEVujg9-VHU/edit">Extra Questions</a>
 </body>
 </html>
