--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About Us</a></li>
 											<li><a href="https://register.codereach.ca">Sign Up</a></li>
+											<li><a href="lesson/">Lesson</a></li>
 										</ul>
 									</div>
 								</li>
