--- a/lesson/index.html
+++ b/lesson/index.html
@@ -7,6 +7,7 @@
     <a href="https://docs.google.com/document/d/1QTEqfzIlmI09FrOiCzgsvfBd8eAO_0lwRXS7quG4S4s/edit#heading=h.veudftfxov1">Week 2</a>
     <a href="https://docs.google.com/document/d/1VFdTG5CYdTA69wFvIMfdcbPS3XtH_HDCz49uGNM3WGY/edit#">Week 3</a>
     <a href="https://docs.google.com/document/d/16psdeXI_PB9ix3avlP-4FLwAq1vdY_h97zGeJBTso9c/edit#">Week 5</a>
+    <a href="https://docs.google.com/document/d/1mWHtr6AiKLHh_pKq9ksG0PQjLsn19jnV76ig0RQW5qc/edit#heading=h.el1m1q99ckrx">Week 6</a>
     <a href="https://docs.google.com/document/d/18sndp-REp0ms8PQf3KAE9V8brwbjVgJDCEVujg9-VHU/edit">Extra Questions</a>
 </body>
 </html>
