new resources page

--- a/about.html
+++ b/about.html
@@ -44,24 +44,24 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<img src="images/logowithstroke.png" class="logo2" />
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="about.html">About Us</a></li>
-											<li><a href="https://register.codereach.ca">Sign up</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-
-					</header>
+				<header id="header" class="alt">
+					<img id="logo2" src="images/logowithstroke.png" class="logo2 hidden" />
+					<nav id="nav">
+						<ul>
+							<li class="special">
+								<a href="#menu" class="menuToggle"><span>Menu</span></a>
+								<div id="menu">
+									<ul>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="about.html">About Us</a></li>
+										<li><a href="https://register.codereach.ca">Sign Up</a></li>
+										<li><a href="resources.html">Resources and Lessons</a></li>
+									</ul>
+								</div>
+							</li>
+						</ul>
+					</nav>
+				</header>
 
 				<!-- Main -->
 					<article id="main" >
