--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							Starting October 18th 2018<br>
 							<span id="date-time">Every Thursday | 4:00 - 5:30</span></p>
 							<ul class="actions special">
-								<li><a href="https://register.codereach.ca" class="button primary">SIGNUP</a></li>
+								<li><a href="#" class="button primary" disabled>Details Coming Soon!</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
