remove signup button on homepage

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="about.html">About Us</a></li>
-										<li><a href="https://register.codereach.ca">Sign Up</a></li>
+										<!--<li><a href="https://register.codereach.ca">Sign Up</a></li>-->
 										<li><a href="resources.html">Resources and Lessons</a></li>
 									</ul>
 								</div>
@@ -172,7 +172,7 @@
 								<p>Accepting Grade 7-8 students.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://register.codereach.ca" class="button fit primary">Signup</a></li>
+								<li><a href="https://register.codereach.ca" class="button fit primary" disabled>Details Coming Soon!</a></li>
 							</ul>
 						</div>
 					</section>
