remove register link

--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
 							<p>Vincent Massey Secondary School<br>
 							1800 Liberty St.<br>
 							Coding course for elementary school students<br>
-							Starting October 18th 2018<br>
 							<span id="date-time">Every Thursday | 4:00 - 5:30</span></p>
 							<ul class="actions special">
 								<li><a href="#" class="button primary" disabled>Details Coming Soon!</a></li>
@@ -135,7 +134,6 @@
 								<p>Due to limited number of seats, we offer CodeReach at a first come first serve basis. To apply click the “signup” button at the start of the page. You can’t miss it we promise!</p>
 								<h4>When are applications due? How will I know if I got accepted?</h4>
 								<p>Information will be released soon.</p>
-								<p style="display: none;">Applications are due by <b>September 10th, 2018</b>. We will send out an email to all accepted students by <b>September 15th, 2018</b>.</p>
 								</div>		
 							</section>
 							<div>
@@ -168,11 +166,11 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Applications Open Now!</h2>
+								<h2>Applications Opening Soon!</h2>
 								<p>Accepting Grade 7-8 students.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://register.codereach.ca" class="button fit primary" disabled>Details Coming Soon!</a></li>
+								<li><a href="#cta" class="button fit primary">Coming Soon!</a></li>
 							</ul>
 						</div>
 					</section>
