--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta charset="utf-8" />
 		<meta property = "og:image" content="images/logowithstroke.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-
+		<meta name="description" content="An after-school programming class for elementary school children in Windsor, ON. Hosted by Vincent Massey Secondary School.">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="assets/js/jquery.min.js"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
