add times and dates

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							Coding course for elementary school students<br>
 							<span id="date-time">Every Thursday | 4:00 - 5:30</span></p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary" disabled>Details Coming Soon!</a></li>
+								<li><a href="#" class="button primary" disabled>Apply Starting September 28th!</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -133,7 +133,7 @@
 								<h4>How do I apply?</h4>
 								<p>Due to limited number of seats, we offer CodeReach at a first come first serve basis. To apply click the “signup” button at the start of the page. You can’t miss it we promise!</p>
 								<h4>When are applications due? How will I know if I got accepted?</h4>
-								<p>Information will be released soon.</p>
+								<p>Applications open September 28th and close October 12th. Admissions decisions will be released on October 15th by email and classes begin October 17th.</p>
 								</div>		
 							</section>
 							<div>
@@ -166,7 +166,7 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Applications Opening Soon!</h2>
+								<h2>Applications Opening September 28th!</h2>
 								<p>Accepting Grade 7-8 students.</p>
 							</header>
 							<ul class="actions stacked">
