--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<ul>
 										<li><a href="index.html">Home</a></li>
 										<li><a href="about.html">About Us</a></li>
-										<!--<li><a href="https://register.codereach.ca">Sign Up</a></li>-->
+										<li><a href="https://register.codereach.ca">Sign Up</a></li>
 										<li><a href="resources.html">Resources and Lessons</a></li>
 									</ul>
 								</div>
@@ -75,7 +75,7 @@
 							Coding course for elementary school students<br>
 							<span id="date-time">Every Thursday | 4:00 - 5:30</span></p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary" disabled>Apply Starting September 28th!</a></li>
+								<li><a href="https://register.codereach.ca" class="button primary">Apply Now!</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -166,11 +166,11 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Applications Opening September 28th!</h2>
+								<h2>Applications are open!</h2>
 								<p>Accepting Grade 7-8 students.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#cta" class="button fit primary">Coming Soon!</a></li>
+								<li><a href="https://register.codereach.ca" class="button fit primary">Apply Now!</a></li>
 							</ul>
 						</div>
 					</section>
