Add Edmodo links

--- a/resources.html
+++ b/resources.html
@@ -60,23 +60,15 @@
                     </div>
                 </div>
 
-                <h2 style="margin-top: 50px;">Lessons</h2>
+                <h2 style="margin-top: 50px;">Edmodo Access</h2>
                 <div class="row">
                     <div class="col-3 col-12-medium">
-                        <h5>James's Class</h5>
-                        <a href="http://bit.ly/2TUHedE" class="button primary icon fa-google">Drive Link</a>
+                        <h5>Students</h5>
+                        <a href="https://new.edmodo.com/login" class="button primary icon fa-link">Launch Edmodo</a>
                     </div>
                     <div class="col-3 col-12-medium">
-                        <h5>Anish's Class</h5>
-                        <a href="http://bit.ly/2FFl3Ev" class="button primary icon fa-google">Drive Link</a>
-                    </div>
-                    <div class="col-3 col-12-medium">
-                        <h5>Zhehai's Class</h5>
-                        <a href="http://bit.ly/2sv8aFt" class="button primary icon fa-google">Drive Link</a>
-                    </div>
-                    <div class="col-3 col-12-medium">
-                        <h5>Noor's Class</h5>
-                        <a href="http://bit.ly/2FwIGzJ" class="button primary icon fa-google">Drive Link</a>
+                        <h5>Parents</h5>
+                        <a href="https://new.edmodo.com/login" class="button primary icon fa-link">Launch Edmodo Parents</a>
                     </div>
                 </div>
             </div>
